--- a/UIConfig.json
+++ b/UIConfig.json
@@ -57,6 +57,56 @@
           "description": "TRANSLATE.CONFIG.ADD_PODCAST_NOTE"
         }
       ]
+    },
+    {
+      "id": "search_podcast",
+      "element": "section",
+      "label": "TRANSLATE.CONFIG.SEARCH_ADD_PODCAST",
+      "icon": "fa-cogs",
+      "description":  "TRANSLATE.CONFIG.SEARCH_PODCAST_DESCRIPTION",
+      "onSave": {
+        "type": "controller",
+        "endpoint": "music_service/podcast",
+        "method": "searchAddPodcast"
+      },
+      "saveButton": {
+        "label": "TRANSLATE.CONFIG.ADD_PODCAST",
+        "data": [
+          "search_list_podcast"
+        ]
+      },
+      "content": [
+        {
+          "id": "search_input_podcast",
+          "type": "text",
+          "element": "input",
+          "label":  "TRANSLATE.CONFIG.PODCAST_NAME",
+          "value": "",
+          "description": "TRANSLATE.CONFIG.SEARCH_PODCAST_NOTE"
+        },
+        {
+          "id": "search_podcast",
+          "element": "button",
+          "label": "TRANSLATE.CONFIG.SEARCH_PODCAST",
+          "onClick": {
+            "type": "emit",
+            "message": "callMethod",
+            "data": {
+              "endpoint": "music_service/podcast",
+              "method": "searchPodcast",
+              "data":  ["search_input_podcast"]
+            }
+          }
+        },
+        {
+          "id": "search_list_podcast",
+          "element": "select",
+          "label": "TRANSLATE.CONFIG.SEARCH_LIST_PODCAST",
+          "value": {},
+          "options": []
+        }
+      ]
     }
+
   ]
 }
