--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "podcast",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "Podcast for Volumio2",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,8 @@
     "kew": "^0.7.0",
     "v-conf": "^1.4.0",
     "rss-parser": "^3.1.2",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "podcast-search": "^1.0.2"
   },
   "repository": {
     "type": "git",
