--- a/UIConfig.json
+++ b/UIConfig.json
@@ -70,7 +70,7 @@
         "method": "searchPodcast"
       },
       "saveButton": {
-        "label": "TRANSLATE.CONFIG.ADD_PODCAST",
+        "label": "TRANSLATE.CONFIG.SEARCH_PODCAST",
         "data": [
           "search_input_podcast"
         ]
@@ -83,6 +83,27 @@
           "label": "TRANSLATE.CONFIG.PODCAST_NAME",
           "value": "",
           "description": "TRANSLATE.CONFIG.SEARCH_PODCAST_NOTE"
+        },
+        {
+          "id": "search_list_podcast",
+          "element": "select",
+          "label": "TRANSLATE.CONFIG.SEARCH_LIST_PODCAST",
+          "value": {},
+          "options": []
+        },
+        {
+          "id": "search_podcast",
+          "element": "button",
+          "label": "TRANSLATE.CONFIG.SEARCH_ADD_PODCAST",
+          "onClick": {
+            "type": "emit",
+            "message": "callMethod",
+            "data": {
+              "endpoint": "music_service/podcast",
+              "method": "searchAddPodcast",
+              "data":  ["search_input_podcast"]
+            }
+          }
         }
       ]
     },
