--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "plugin_type": "music_service"
   },
   "dependencies": {
+    "feedparser": "^2.2.9",
     "fs-extra": "^6.0.1",
+    "html-to-json": "^0.6.0",
     "kew": "^0.7.0",
-    "v-conf": "^1.4.2",
-    "rss-parser": "^3.4.2",
     "lodash": "^4.17.10",
     "unirest": "^0.5.1",
-    "html-to-json": "^0.6.0"
+    "v-conf": "^1.4.2"
   },
   "repository": {
     "type": "git",
